refactor(condo): INFRA-916 remove tracking provider from cc

--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -56,6 +56,7 @@
     "@keystonejs/list-plugins": "^8.1.0",
     "@keystonejs/server-side-graphql-client": "^2.1.0",
     "@keystonejs/utils": "^6.1.0",
+    "@metro-fs/analytics-plugin-posthog": "^1.14.0",
     "@open-condo/apollo": "workspace:^",
     "@open-condo/bridge": "workspace:^",
     "@open-condo/cli": "workspace:^",
@@ -85,7 +86,7 @@
     "@zeit/next-less": "^1.0.1",
     "ajv": "8.11.0",
     "ajv-formats": "^2.1.0",
-    "amplitude-js": "^8.18.1",
+    "analytics": "^0.8.16",
     "antd": "^4.24.12",
     "antd-mask-input": "^0.1.15",
     "aws-sdk": "^2.1692.0",
@@ -119,7 +120,7 @@
     "graphql-upload": "^15.0.2",
     "graphql-voyager": "^1.0.0-rc.31",
     "html2canvas": "^1.0.0-rc.7",
-    "http-proxy-middleware": "^2.0.6",
+    "http-proxy": "^1.18.1",
     "iconv-lite": "^0.6.3",
     "immer": "9.0.13",
     "isomorphic-fetch": "^3.0.0",
