--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -6,7 +6,7 @@ on:
       - main
 
   # NOTE: change pull_request_target to pull_request if you want to change the CI in your branch
-  pull_request_target:
+  pull_request:
     types:
       - opened
       - reopened
@@ -81,6 +81,7 @@ jobs:
           driver-opts: |
             env.BUILDKIT_STEP_LOG_MAX_SIZE=10485760
             image=${{ secrets.DOCKER_REGISTRY }}/doma/utils/buildkit:buildx-stable-2
+            network=host
       - name: Build repo image
         uses: docker/build-push-action@v5
         with:
