refactor(keystone): INFRA-931 reorganize plugins

--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -10,8 +10,7 @@
     "./plugins/utils": "./plugins/utils/index.js",
     "./plugins/utils/address-service-client": "./plugins/utils/address-service-client/index.js",
     "./preprocessors": "./preprocessors/index.js",
-    "./rateLimiting": "./rateLimiting/index.js",
-    "./sentry": "./sentry/index.js",
+    "./apolloServerPlugins": "./apolloServerPlugins/index.js",
     "./fileAdapter/": "./fileAdapter/",
     "./*": "./*.js",
     "./crypto": "./crypto/index.js"
