--- a/.github/workflows/_nodejs.condo.core.tests.yml
+++ b/.github/workflows/_nodejs.condo.core.tests.yml
@@ -61,7 +61,7 @@ jobs:
           PROMETHEUS_RW_SERVER_URL: ${{ secrets.K6_PROMETHEUS_RW_SERVER_URL }}
           PROMETHEUS_USER: ${{ secrets.K6_PROMETHEUS_USER }}
           PROMETHEUS_PASSWORD: ${{ secrets.K6_PROMETHEUS_PASSWORD }}
-          GH_REF_NAME: ${{ github.ref_name }}
+          GH_REF_NAME: ${{ github.event.pull_request.head.ref || github.ref_name }}
 
       - name: Collect docker logs on failure
         if: failure()
