--- a/.github/workflows/_nodejs.condo.core.tests.yml
+++ b/.github/workflows/_nodejs.condo.core.tests.yml
@@ -43,7 +43,7 @@ jobs:
         env:
           REGISTRY: ${{ secrets.DOCKER_REGISTRY }}/doma/utils/
         run: |
-          docker-compose up -d redis postgresdb
+          docker-compose --profile dbs up -d
 
       - name: run tests
         run: |
