--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -99,6 +99,7 @@
     "jschardet": "^3.0.0",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.3.1",
+    "jszip": "^3.10.1",
     "jwt-decode": "3.1.2",
     "less": "^3.12.2",
     "lodash": "^4.17.21",
