feat(global): INFRA-773 swap redis to valkey as review key-value storage

--- a/werf.yaml
+++ b/werf.yaml
@@ -364,8 +364,8 @@ docker:
   ENV:
     LANG: C.UTF-8
 ---
-image: redisreview
-from: redis:6.2
+image: valkeyreview
+from: valkey/valkey:8.0.2
 ---
 image: preparepostgresreview
 from: postgres:16.8
