--- a/apps/address-service/package.json
+++ b/apps/address-service/package.json
@@ -28,26 +28,15 @@
     "graphql": "^15.6.1",
     "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
-    "next": "^9.5.5",
-    "next-cookies": "^2.0.3",
     "openid-client": "4.7.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "uuid": "^8.3.0",
-    "validate.js": "^0.13.1"
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^11.2.5",
     "@types/jest": "^29.4.0",
     "@types/node": "^16",
     "@types/react": "16.9.17",
-    "babel-jest": "^29.7.0",
-    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "jest-jasmine2": "^29.7.0",
-    "jest-watch-typeahead": "^0.6.1",
-    "pluralize": "^8.0.0",
     "typescript": "^5.5.4"
   }
 }
