--- a/packages/webhooks/package.json
+++ b/packages/webhooks/package.json
@@ -35,11 +35,12 @@
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.7",
     "pluralize": "^8",
-    "redlock": "^5.0.0-beta.2"
+    "redlock": "^5.0.0-beta.2",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "dayjs": "^1.11.6",
-    "falsey": "^1.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-jasmine2": "^29.7.0"
