--- a/packages/apollo-server-client/package.json
+++ b/packages/apollo-server-client/package.json
@@ -9,7 +9,10 @@
     "@apollo/client": "^3.11.8",
     "apollo-link-error": "^1.1.13",
     "apollo-upload-client": "^17.0.0",
+    "form-data": "^4.0.0",
     "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6"
+    "graphql-tag": "^2.12.6",
+    "lodash": "^4.17.21",
+    "node-fetch": "^3.3.2"
   }
 }
