--- a/.github/workflows/deploy_review.yaml
+++ b/.github/workflows/deploy_review.yaml
@@ -12,7 +12,28 @@ jobs:
       WERF_SECRET_KEY: ${{ secrets.WERF_SECRET_KEY }}
       PULL_USER: ${{ secrets.PULL_USER }}
       PULL_PERSONAL_ACCESS_KEY: ${{ secrets.PULL_PERSONAL_ACCESS_KEY }}
+      KUBE_CONFIG_BASE64_DATA: ${{ secrets.TEST_CLUSTER_KUBE_CONFIG_BASE64_DATA }}
     steps:
+      - name: Check review limits
+        run: |
+          raw_namespaces=$(kubectl --kubeconfig <(echo $KUBE_CONFIG_BASE64_DATA | base64 --decode) get ns -o jsonpath='{range .items[*]}{.metadata.name}{"\n"}{end}')
+          read -a namespaces <<< $raw_namespaces
+          index=0
+          review_namespaces=0
+          
+          while [ $index -lt ${#namespaces[@]} ]; do
+            item="${namespaces[$index]}";
+            if [[ $item =~ ^review-.* ]]; then
+              ((review_namespaces++));
+            fi
+            ((index++));
+          done
+          
+          if [[ $review_namespaces == 5 ]]; then
+            echo "The maximum number of simultaneous reviews has been reached.";
+            exit 1;
+          fi
+
       - name: Login to Container Registry
         uses: docker/login-action@v3
         with:
