--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -21,6 +21,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "@arch-ui/controls": "^0.1.12",
+    "@arch-ui/fields": "^3.0.8",
+    "@arch-ui/input": "^0.1.14",
+    "@arch-ui/lozenge": "^0.0.20",
+    "@arch-ui/select": "^0.1.12",
+    "@arch-ui/theme": "^0.0.14",
+    "@emotion/react": "^11.9.3",
     "@graphql-tools/graphql-file-loader": "^7.5.17",
     "@graphql-tools/links": "^8.3.6",
     "@graphql-tools/load": "^7.7.4",
@@ -48,6 +55,12 @@
     "@keystonejs/utils": "^6.1.0",
     "@open-condo/config": "workspace:^",
     "@open-condo/locales": "workspace:^",
+    "@opentelemetry/api": "^1.4.1",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.41.2",
+    "@opentelemetry/instrumentation-ioredis": "^0.35.1",
+    "@opentelemetry/instrumentation-pg": "^0.36.1",
+    "@opentelemetry/sdk-node": "^0.41.2",
+    "@primer/octicons-react": "^11.3.0",
     "@sentry/node": "^6.19.7",
     "ajv": "8.11.0",
     "apollo-errors": "^1.9.0",
@@ -57,9 +70,11 @@
     "axios": "^0.21.2",
     "axios-cookiejar-support": "^1.0.1",
     "big.js": "^6.1.1",
+    "body-parser": "^1.19.1",
     "bull": "^4.8.4",
     "connect-redis": "^6.0.0",
     "crypto": "^1.0.1",
+    "csv-parse": "^5.2.0",
     "cuid": "^2.1.8",
     "dayjs": "^1.10.6",
     "debug": "^4.3.4",
@@ -67,6 +82,7 @@
     "emittery": "^0.7.1",
     "encoding": "^0.1.0",
     "ensure-error": "^3.0.1",
+    "esdk-obs-nodejs": "3.21.6",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
@@ -91,6 +107,7 @@
     "nunjucks": "^3.2.4",
     "ow": "^0.19.0",
     "pino": "^6.13.3",
+    "pino-std-serializers": "^4.0.0",
     "pluralize": "^8",
     "react": "^16.13.1",
     "redlock": "^5.0.0-beta.2",
@@ -99,7 +116,8 @@
     "tough-cookie": "^4.1.3",
     "uuid": "^8.3.0",
     "validate.js": "^0.13.1",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   },
   "repository": "https://github.com/open-condo-software/condo/tree/main/packages/keystone",
   "devDependencies": {
