--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "execa": "^5",
     "husky": "7.0.4",
     "jest": "^29.7.0",
     "jest-diff": "^29.7.0",
