feat(condo): DOMA-11309 remove lodash from paymentSplitter

--- a/packages/billing/package.json
+++ b/packages/billing/package.json
@@ -47,8 +47,7 @@
     }
   },
   "dependencies": {
-    "big.js": "^6.2.2",
-    "lodash": "^4.17.21"
+    "big.js": "^6.2.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.6.0",
