feat(condo): DOMA-11309 ts entries were synced with module exports

--- a/packages/billing/package.json
+++ b/packages/billing/package.json
@@ -40,6 +40,11 @@
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
   "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
+    },
     "./utils/paymentSplitter": {
       "types": "./dist/utils/paymentSplitter.d.ts",
       "require": "./dist/utils/paymentSplitter.js",
