--- a/apps/miniapp/package.json
+++ b/apps/miniapp/package.json
@@ -31,26 +31,7 @@
     "@emotion/core": "^10.1.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.10.0",
-    "@keystonejs/adapter-knex": "^13.2.0",
-    "@keystonejs/adapter-mongoose": "^11.2.0",
-    "@keystonejs/adapter-prisma": "^3.2.0",
-    "@keystonejs/app-admin-ui": "^7.5.0",
-    "@keystonejs/app-graphql": "^6.3.0",
-    "@keystonejs/app-graphql-playground": "^5.2.2",
     "@keystonejs/app-next": "^5.2.3",
-    "@keystonejs/app-static": "^5.2.0",
-    "@keystonejs/auth-password": "^6.1.0",
-    "@keystonejs/fields": "^22.1.3",
-    "@keystonejs/fields-color": "^1.1.0",
-    "@keystonejs/fields-content": "^9.1.0",
-    "@keystonejs/fields-location-google": "^3.4.0",
-    "@keystonejs/fields-markdown": "^5.3.2",
-    "@keystonejs/fields-wysiwyg-tinymce": "^5.4.0",
-    "@keystonejs/file-adapters": "^7.1.0",
-    "@keystonejs/keystone": "^19.3.1",
-    "@keystonejs/list-plugins": "^8.1.0",
-    "@keystonejs/server-side-graphql-client": "^2.1.0",
-    "@keystonejs/utils": "^6.1.0",
     "@miniapp/domains": "link:./domains",
     "@open-condo/bridge": "workspace:^",
     "@open-condo/codegen": "workspace:^",
@@ -58,10 +39,8 @@
     "@open-condo/keystone": "workspace:^",
     "@open-condo/next": "workspace:^",
     "@open-condo/ui": "workspace:^",
-    "@welldone-software/why-did-you-render": "^5.0.0-alpha.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
-    "ajv": "8.11.0",
     "antd": "^4.24.12",
     "classnames": "2.2.6",
     "cross-env": "^7.0.3",
@@ -69,48 +48,30 @@
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
     "express": "^4.17.1",
-    "facepaint": "^1.2.1",
-    "get-contrast": "^2.0.0",
     "graphql-tag": "^2.12.6",
     "graphql-upload": "^15.0.1",
-    "immer": "9.0.13",
     "less": "^3.12.2",
     "lodash": "^4.17.21",
     "next": "^9.5.5",
     "next-transpile-modules": "^4.1.0",
-    "numeral": "2.0.6",
     "openid-client": "4.7.4",
-    "qs": "^6.9.4",
-    "rc-queue-anim": "^1.8.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-fittext": "^1.0.0",
-    "react-markdown": "^4.3.1",
-    "react-responsive": "^8.1.0",
-    "react-test-renderer": "^16.13.1",
     "tslib": "^2.5.3",
-    "use-immer": "^0.4.1",
-    "uuid": "^8.3.0",
-    "validator": "^13.1.1"
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@open-condo/cli": "workspace:^",
-    "@testing-library/react": "^11.2.5",
     "@types/jest": "^29.4.0",
     "@types/node": "^16",
     "@types/react": "16.9.17",
     "antd-dayjs-webpack-plugin": "^1.0.6",
-    "babel-jest": "^29.7.0",
     "css-loader": "1.0.1",
     "extracted-loader": "^1.0.7",
-    "identity-obj-proxy": "^3.0.0",
     "ignore-loader": "0.1.2",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "jest-jasmine2": "^29.7.0",
-    "jest-watch-typeahead": "0.6.5",
     "less-loader": "^4.0.0",
-    "pluralize": "^8.0.0",
     "raw-loader": "^4.0.2",
     "typescript": "^5.5.4",
     "webpack": "^4.46.0"
