feat(condo): DOMA-7997 add news-telegram submodule (#5899)
* feat(condo): DOMA-7997 add news-telegram submodule

* fix(condo): DOMA-7887 split submodules, add front 'add channels'

* fix(condo): DOMA-7887 delete old repo

* feat (condo): DOMA-10993 add setting and preview

* fix (condo): DOMA-7887 update submodules

* fix (condo): DOMA-7887 update submodule

* fix (condo): DOMA-10994 delete unused deps and fix build, update yarn.lock

* fix (condo): DOMA-10994 fix stylelint

* fix (condo): DOMA-10994 update yarn.lock

* fix (condo): DOMA-10994 fix build

* fix (condo): DOMA-10994 fix build

* fix (condo): DOMA-10994 fix build

* fix (condo): DOMA-10994 fix build

* fix (condo): DOMA-10994 fix build

* fix (condo): DOMA-10994 fix build

* fix (condo): DOMA-10994 fix build

* fix (condo): DOMA-10994 fix build

* fix (condo): DOMA-10994 add cross-env

* fix (condo): DOMA-10994 fix import

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,6 +55,12 @@
 [submodule "apps/news-greenhouse"]
 	path = apps/news-greenhouse
 	url = git@github.com:open-condo-software/condo-news-greenhouse.git
+[submodule "apps/news-telegram-api"]
+	path = apps/news-telegram-api
+	url = git@github.com:open-condo-software/condo-news-telegram-api.git
 [submodule "apps/announcements"]
     path = apps/announcements
 	url = git@github.com:open-condo-software/condo-announcements.git
+[submodule "apps/news-telegram-web"]
+	path = apps/news-telegram-web
+	url = git@github.com:open-condo-software/condo-news-telegram-web.git
