feat(condo): DOMA-11505 change filter for detection of meter-importer changes in ci

--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -165,7 +165,7 @@ jobs:
             webhooks:
               - 'packages/webhooks/**'
             meter-importer:
-              - 'apps/meter-importer'
+              - 'apps/meter-importer/**'
               - 'packages/**'
 
   lint:
