--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -121,6 +121,7 @@ jobs:
       address-service: ${{ steps.detect-changes.outputs.address-service }}
       dev-portal-api: ${{ steps.detect-changes.outputs.dev-portal-api }}
       meter-importer: ${{ steps.detect-changes.outputs.meter-importer }}
+      miniapp-utils: ${{ steps.detect-changes.outputs.miniapp-utils }}
       migrator: ${{ steps.detect-changes.outputs.migrator }}
       open-condo: ${{ steps.detect-changes.outputs.open-condo }}
       rb: ${{ steps.detect-changes.outputs.rb }}
@@ -152,6 +153,8 @@ jobs:
               - 'packages/**'
             migrator:
               - 'packages/migrator/**'
+            miniapp-utils:
+              - 'packages/miniapp-utils/**'
             open-condo:
               - 'packages/**'
               - '**/*.md'
@@ -536,6 +539,33 @@ jobs:
           yarn install --immutable
       - name: Run @open-condo/migrator tests
         run: yarn workspace @open-condo/migrator test
+        env:
+          PROMETHEUS_RW_SERVER_URL: ${{ secrets.K6_PROMETHEUS_RW_SERVER_URL }}
+          PROMETHEUS_USER: ${{ secrets.K6_PROMETHEUS_USER }}
+          PROMETHEUS_PASSWORD: ${{ secrets.K6_PROMETHEUS_PASSWORD }}
+          GH_REF_NAME: ${{ github.event.pull_request.head.ref || github.ref_name }}
+
+  run-miniapp-utils-tests:
+    name: Miniapp Utils Tests
+    runs-on: ubuntu-22.04
+    needs:
+      - authorize
+      - detect-changes
+    if: ${{ needs.detect-changes.outputs.miniapp-utils == 'true' }}
+    steps:
+      - name: Checkout code with submodules
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+          ssh-key: ${{ secrets.SSH_DOCK_SERVER_PRIVATE_KEY }}
+          ref: ${{ env.REF }}
+      - name: Install packages
+        run: |
+          npm i -g turbo
+          yarn install --immutable
+      - name: Run @open-condo/miniapp-utils tests
+        run: yarn workspace @open-condo/miniapp-utils test
         env:
           PROMETHEUS_RW_SERVER_URL: ${{ secrets.K6_PROMETHEUS_RW_SERVER_URL }}
           PROMETHEUS_USER: ${{ secrets.K6_PROMETHEUS_USER }}
