--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,6 @@ WORKER_CONCURRENCY=50
 
 # AI setup
 # To run tests locally, you need the AI_FLOWS_CONFIG and AI_ADAPTERS_CONFIG variables with the listed values
-AI_ENABLED=false
+AI_ENABLED=true
 AI_FLOWS_CONFIG='{"custom":{"success_flow":{"adapter":"flowise","predictionUrl":"http://localhost:57657/test/flowise/api/v1/prediction/success"}, "failed_flow":{"adapter":"flowise","predictionUrl":"http://localhost:57657/test/flowise/api/v1/prediction/fail/500"}}}'
 AI_ADAPTERS_CONFIG='{"flowise":{"secret":"test-no-real-secret"}}'
